--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,9 @@
 *.iml
 .gradle
 /local.properties
-/.idea/workspace.xml
-/.idea/libraries
+.idea/workspace.xml
 .DS_Store
 /build
 /captures
-.externalNativeBuild
-/.gradle
-/.idea
+.idea
+gradle/
